--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -9,7 +9,7 @@ $vid-list: overview guns edu marriage life;
 }
 
 $lawmaker-bp-sm: new-breakpoint(min-width 410px);
-$lawmaker-bp-md: new-breakpoint(min-width 835px);
+$lawmaker-bp-md: new-breakpoint(min-width 900px);
 $lawmaker-bp-lg: new-breakpoint(min-width 960px);
 
 /*COLORS:*/
